# omniplan-ai-skill

./: README.md  pyproject.toml  test_tools.py
scripts/: omniplan_skill.py
skills/omniplan-ai-skill/: SKILL.md
src/omniplan_mcp/: __main__.py  cli.py  documents.py  tasks.py
