[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniplan-ai-skill"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
omniplan-skill = "omniplan_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
